--- a/index.html
+++ b/index.html
@@ -2,13 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" />
     <title>KQSWA</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+        <nav class="navbar">
+            <h1 class="header-style">KQSWA</p>
+        </nav>
+        <div class="row">
+            <div class="col-4 bg-warning">
+                <div class="mt-2">Search for a City:</div>
+                <div class="input-group mb-3">
+                    <input type="text" id="city" class="form-control">
+                    <div class="input-group-append">
+                        <button class="btn btn-success" type="button" id="searchCity">🔎</button>
+                    </div>
+                </div>
+                <div class="list-group"></div>
+            </div>
+            <div class="col-8">
+                <div class="row p-2">
+                    <div class="card">
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <h3>Forecast</h3>
+                </div>
+                <div id="weeklyForecast" class="row"></div>
+            </div>
+        </div>
+
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
